--- a/Python/20221210.ipynb
+++ b/Python/20221210.ipynb
@@ -2,20 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# ZED_data = '../data/20221210_data/ZED/vga/depth_PNG_3029_376_06-12-2022-19-40-27.png'\n",
-    "ZED_data = '../data/20221210_data/ZED/vga/point_cloud_PLY_3029_376_06-12-2022-19-40-31.ply'\n",
-    "LiDAR_data = '../data/20221210_data/lidar/300/2022-12-10-16-53-36_Velodyne-VLP-16-Data.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -23,23 +11,52 @@
     "import numpy as np\n",
     "import csv\n",
     "import copy\n",
-    "import scipy"
+    "import scipy\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
+   "source": [
+    "# ZED_data = '../data/20221210_data/ZED/vga/depth_PNG_3029_376_06-12-2022-19-40-27.png'\n",
+    "ZED_data = '../data/ZED/vga/point_cloud_PLY_3029_376_06-12-2022-19-40-31.ply'\n",
+    "LiDAR_data = '../data/lidar/300/2022-12-10-16-53-36_Velodyne-VLP-16-Data.csv'\n",
+    "\n",
+    "os.path.exists(ZED_data)\n",
+    "os.path.exists(LiDAR_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[1;33m[Open3D WARNING] Read PLY failed: unable to read file: ../data/ZED/vga/point_cloud_PLY_3029_376_06-12-2022-19-40-31.ply\u001b[0;m\n",
       "[[-2.492405  1.447196 -2.436705]\n",
       " [-2.475858  1.441786 -2.427595]\n",
       " [-2.469097  1.442058 -2.428054]\n",
@@ -48,6 +65,13 @@
       " [ 1.579812 -0.893185 -1.709056]\n",
       " [ 1.584903 -0.893186 -1.709058]]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RPly: Error reading 'blue' of 'vertex' number 236968\n"
+     ]
     }
    ],
    "source": [
@@ -55,18 +79,18 @@
     "pts_zed = np.asarray(pcd_zed.points)\n",
     "\n",
     "print(pts_zed)\n",
-    "# o3d.visualization.draw_geometries([pcd_zed])"
-   ],
+    "o3d.visualization.draw_geometries([pcd_zed])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
+   },
    "outputs": [],
    "source": [
     "with open(LiDAR_data, newline='') as f:\n",
@@ -76,39 +100,41 @@
     "    for index, row in enumerate(rows[1:]):\n",
     "        # print(index, row[0])\n",
     "        pts_lidar[index] = row[0:3]"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   },
    "outputs": [],
    "source": [
     "coords = o3d.geometry.TriangleMesh.create_coordinate_frame()\n",
     "pcd_lidar = o3d.geometry.PointCloud()\n",
     "pcd_lidar.points = o3d.utility.Vector3dVector(pts_lidar)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "PointCloud with 17556 points."
+      "text/plain": [
+       "PointCloud with 17556 points."
+      ]
      },
-     "execution_count": 155,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,17 +145,17 @@
     "pcd_lidar_r = copy.deepcopy(pcd_lidar).translate((0, 0, 0))\n",
     "pcd_lidar_r.rotate(pcd_lidar_r.get_rotation_matrix_from_xyz((-np.pi / 2, 0, 0)), center=(0, 0, 0))\n",
     "# print(np.asarray(pcd_lidar_r.points))"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -163,32 +189,43 @@
     "# x = np.array(range(shape_zed[0]))\n",
     "# y = np.array(range(3))\n",
     "# pts_lidar_u = scipy.interpolate.interp2d(x, y, pts_lidar_r, kind='linear')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PointCloud with 17556 points."
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pcd_zed.paint_uniform_color([1, 0.706, 0])\n",
     "pcd_lidar_r.paint_uniform_color([1, 0, 0])"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "o3d.visualization.draw_geometries([\n",
@@ -197,18 +234,40 @@
     "    # pcd_lidar,\n",
     "    pcd_lidar_r\n",
     "])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% Try to align geometries (body frames)\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.30146686e-02  4.97122574e+00  8.67733657e-02]\n",
+      " [ 1.17653925e-02  4.21315956e+00 -9.72688377e-01]\n",
+      " [ 1.39323259e-02  4.98913383e+00  2.61470437e-01]\n",
+      " ...\n",
+      " [-3.76536814e-03  1.96126759e+00  2.40813822e-01]\n",
+      " [-6.66596636e-04  1.90965867e+00  2.34476611e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n",
+      "[[ 1.30146686e-02  8.67733657e-02 -4.97122574e+00]\n",
+      " [ 1.17653925e-02 -9.72688377e-01 -4.21315956e+00]\n",
+      " [ 1.39323259e-02  2.61470437e-01 -4.98913383e+00]\n",
+      " ...\n",
+      " [-3.76536814e-03  2.40813822e-01 -1.96126759e+00]\n",
+      " [-6.66596636e-04  2.34476611e-01 -1.90965867e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n",
+      "transformation is correct!\n"
+     ]
+    }
+   ],
    "source": [
     "#Writing points with rows as the coordinates\n",
     "p1_t = np.asarray(pcd_lidar.points)\n",
@@ -249,32 +308,31 @@
     "    print(\"transformation is correct!\")\n",
     "else:\n",
     "    print(\"transformation is wrong...\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% Try to align geometries (body frames)\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
