--- a/Python/papoulish_gerchberg.ipynb
+++ b/Python/papoulish_gerchberg.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from PIL import Image\n",
     "from matplotlib import pyplot as plt\n",
-    "import PG\n"
+    "import PG.PG as PG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_file = 'baboon.png'\n",
+    "image_file = 'image/baboon.png'\n",
     "\n",
     "image = Image.open(image_file).convert('L')\n",
     "x = np.asarray(image)"
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21ee5ac5670>"
+       "<matplotlib.image.AxesImage at 0x7f9cfb2fac10>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -58,26 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = 2;  # downsampling coefficient\n",
+    "m = 8;  # downsampling coefficient\n",
     "y = x[::m, ::m]  # input LR image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21ee483b670>"
+       "<matplotlib.image.AxesImage at 0x7f9cfb2d5700>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21ee6532e20>"
+       "<matplotlib.image.AxesImage at 0x7f9cfb203c40>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x21ee8163fd0>"
+       "<matplotlib.image.AxesImage at 0x7f9cfb1f6970>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -172,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "papoulis-gerchberg-qfgwHW3t",
+   "display_name": "Python 3.8.10 ('Python-ddiOOh4g')",
    "language": "python",
    "name": "python3"
   },
@@ -186,12 +186,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6bf96e06c190c7c6642c5281a79524cf620c4e751a849c12667a27992abdf258"
+    "hash": "00f03ad223d9bbefba2d85a96e4c14bf4b7cfec3ac1501740897c115facd9986"
    }
   }
  },
