--- a/Python/Papoulish-Gerchberg/papoulish_gerchberg.ipynb
+++ b/Python/Papoulish-Gerchberg/papoulish_gerchberg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_file = 'baboon.png'\n",
+    "image_file = './Data/Images/baboon.png'\n",
     "\n",
     "image = Image.open(image_file).convert('L')\n",
     "x = np.asarray(image)"
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x284bc099c70>"
+       "<matplotlib.image.AxesImage at 0x113cf1310>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x284bbf98e50>"
+       "<matplotlib.image.AxesImage at 0x117a66760>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x284bc00f910>"
+       "<matplotlib.image.AxesImage at 0x117ad9a90>"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
