--- a/Python/notebooks/20221210.ipynb
+++ b/Python/notebooks/20221210.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import open3d as o3d\n",
@@ -17,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,15 +38,15 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# ZED_data = '../data/20221210_data/ZED/vga/depth_PNG_3029_376_06-12-2022-19-40-27.png'\n",
-    "ZED_data = '../data/ZED/vga/point_cloud_PLY_3029_376_06-12-2022-19-40-31.ply'\n",
-    "LiDAR_data = '../data/lidar/300/2022-12-10-16-53-36_Velodyne-VLP-16-Data.csv'\n",
+    "ZED_data = '../../data/ZED/vga/point_cloud_PLY_3029_376_06-12-2022-19-40-31.ply'\n",
+    "LiDAR_data = '../../data/lidar/300/2022-12-10-16-53-36_Velodyne-VLP-16-Data.csv'\n",
     "\n",
     "os.path.exists(ZED_data)\n",
     "os.path.exists(LiDAR_data)"
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -56,7 +66,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33m[Open3D WARNING] Read PLY failed: unable to read file: ../data/ZED/vga/point_cloud_PLY_3029_376_06-12-2022-19-40-31.ply\u001b[0;m\n",
       "[[-2.492405  1.447196 -2.436705]\n",
       " [-2.475858  1.441786 -2.427595]\n",
       " [-2.469097  1.442058 -2.428054]\n",
@@ -64,13 +73,6 @@
       " [ 1.574756 -0.893204 -1.709091]\n",
       " [ 1.579812 -0.893185 -1.709056]\n",
       " [ 1.584903 -0.893186 -1.709058]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "RPly: Error reading 'blue' of 'vertex' number 236968\n"
      ]
     }
    ],
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -134,7 +136,7 @@
        "PointCloud with 17556 points."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -207,7 +209,7 @@
        "PointCloud with 17556 points."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -313,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python-Ngt5EYKa",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -327,11 +329,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4d7ba9aa276e95d0ad1aa37bcd56ba5a2d0cf1003f06d0e0b87eeefe441e06dd"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
