--- a/Python/notebooks/20221210.ipynb
+++ b/Python/notebooks/20221210.ipynb
@@ -216,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.10 ('Python-ddiOOh4g')",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +234,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "00f03ad223d9bbefba2d85a96e4c14bf4b7cfec3ac1501740897c115facd9986"
    }
   }
  },
