ZED depth frame PG fusion implemented

--- a/Python/notebooks/sensor_fusion_pg.ipynb
+++ b/Python/notebooks/sensor_fusion_pg.ipynb
@@ -83,6 +83,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mid_cutoff = 18000\n",
+    "sph_lidar[:,1] += mid_cutoff\n",
+    "\n",
+    "mask = sph_lidar[:,1] > 2*mid_cutoff\n",
+    "\n",
+    "sph_lidar[mask, 1] -= 2*mid_cutoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "num_arrays = 16\n",
     "\n",
     "# Split the array based on the range of the first column\n",
@@ -110,8 +124,7 @@
     "        sorted_array.insert(index, gt_mean)\n",
     "    print(len(sorted_array))\n",
     "    \n",
-    "    sph_lidar_frame.append(sorted_array)\n",
-    "np.savetxt(\"input_sorted.csv\", sph_lidar_frame,delimiter=',')"
+    "    sph_lidar_frame.append(sorted_array)"
    ]
   },
   {
@@ -228,8 +241,7 @@
     "\n",
     "v_range = (pts_zed_sph_filt[:,2].min(), pts_zed_sph_filt[:,2].max()+1)\n",
     "\n",
-    "pts_zed_sph_filt[:,2] = np.vectorize(map_range_to_interval)(pts_zed_sph_filt[:,2], v_range[0], v_range[1], 0, 720)\n",
-    "# np.savetxt(\"zed_filt.csv\", pts_zed_sph_filt,delimiter=',')"
+    "pts_zed_sph_filt[:,2] = np.vectorize(map_range_to_interval)(pts_zed_sph_filt[:,2], v_range[0], v_range[1], 0, 720)"
    ]
   },
   {
@@ -308,7 +320,7 @@
     "    pg_mean = 0\n",
     "    filtered = input\n",
     "    \n",
-    "    while (pg_mean > gt_mean * 1.01 or pg_mean < gt_mean * 0.99) and threshold > 0:\n",
+    "    while (pg_mean > gt_mean * 1.1 or pg_mean < gt_mean * 0.9) and threshold > 0:\n",
     "    # for i in range(iter):\n",
     "        filtered = lpf(filtered,ncutoff)\n",
     "        filtered[::us_rate, ::us_rate] = input[::us_rate, ::us_rate]\n",
@@ -416,15 +428,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# np.savetxt(\"back_pts.txt\", back_pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "point_cloud_data = back_pts\n",
     "\n",
     "# Convert spherical coordinates to Cartesian coordinates\n",
@@ -475,20 +478,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd_pg_lidar.paint_uniform_color([1, 0.706, 0])\n",
-    "pcd_inp_lidar.paint_uniform_color([1, 0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "o3d.visualization.draw_geometries([\n",
     "    pcd_pg_lidar, \n",
-    "    pcd_inp_lidar\n",
+    "    # pcd_inp_lidar\n",
     "    ])"
    ]
   }
