--- a/Python/notebooks/zed_frame_v1.ipynb
+++ b/Python/notebooks/zed_frame_v1.ipynb
@@ -8,33 +8,57 @@
    "source": [
     "import open3d as o3d\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import pyplot as plt\n",
+    "import os\n",
+    "from PIL import Image\n",
     "import csv\n",
-    "import os"
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ZED_data = '../../data/ZED/720/depth_PNG_3029_720_06-12-2022-19-39-53.png'\n",
+    "os.path.exists(ZED_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zed_depth_image = Image.open(ZED_data).convert('I')\n",
+    "zed_depth = np.asarray(zed_depth_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(zed_depth)\n",
+    "print(zed_depth.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "LiDAR_data = '../../data/lidar/300/2022-12-10-16-53-36_Velodyne-VLP-16-Data.csv'\n",
-    "\n",
     "os.path.exists(LiDAR_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(LiDAR_data, newline='') as f:\n",
@@ -80,14 +104,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mid_cutoff = 18000\n",
+    "mid_cutoff = 17100\n",
     "sph_lidar[:,1] += mid_cutoff\n",
-    "\n",
     "mask = sph_lidar[:,1] > 2*mid_cutoff\n",
+    "sph_lidar[mask, 1] -= 2*mid_cutoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_cutoff = mid_cutoff + 85 * 100 / 2\n",
+    "low_cutoff = mid_cutoff - 85 * 100 / 2\n",
     "\n",
-    "sph_lidar[mask, 1] -= 2*mid_cutoff\n",
-    "\n",
-    "np.savetxt(\"input_sorted.csv\", sph_lidar,delimiter=',')"
+    "sph_lidar_85 = sph_lidar[sph_lidar[:,1] > low_cutoff]\n",
+    "sph_lidar_85 = sph_lidar_85[sph_lidar_85[:,1] < high_cutoff]"
    ]
   },
   {
@@ -103,8 +136,8 @@
     "for i in range(num_arrays):\n",
     "    lower = i\n",
     "    upper = i + 1\n",
-    "    mask = (sph_lidar[:, 0] >= lower) & (sph_lidar[:, 0] < upper)\n",
-    "    sub_array = sph_lidar[mask, 1:]\n",
+    "    mask = (sph_lidar_85[:, 0] >= lower) & (sph_lidar_85[:, 0] < upper)\n",
+    "    sub_array = sph_lidar_85[mask, 1:]\n",
     "    arrays.append(sub_array)\n",
     "\n",
     "# Convert each sub-array to a 1D array sorted by the first column and using the second column as the value\n",
@@ -124,15 +157,7 @@
     "    print(len(sorted_array))\n",
     "    \n",
     "    sph_lidar_frame.append(sorted_array)\n",
-    "# np.savetxt(\"input_sorted.csv\", sph_lidar_frame,delimiter=',')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "apply papoulish gerchberg"
+    "sph_lidar_frame = np.asarray(sph_lidar_frame)"
    ]
   },
   {
@@ -141,12 +166,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = 720//16\n",
+    "print(sph_lidar_frame.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = 400//16\n",
+    "gt_mean = sph_lidar_85[:,2].mean()\n",
     "\n",
-    "gt_mean = sph_lidar[:,2].mean()\n",
-    "\n",
-    "us = np.ones((720,1280)) * gt_mean /2\n",
-    "us[::m,:] = sph_lidar_frame\n",
+    "us = zed_depth\n",
+    "us = us / 1000  # us.mean() * gt_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(zed_depth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(np.count_nonzero(us > 20), (zed_depth > 20).size)\n",
+    "us[us > 20] = 20\n",
+    "us = us / us.mean() * gt_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(us)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(gt_mean, us.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(us.shape)\n",
+    "print(us[160:560,:][::m,:].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us[160:560,:][::m,:] = sph_lidar_frame\n",
     "print(np.count_nonzero(us))\n",
     "\n",
     "plt.imshow(us)"
@@ -193,7 +283,7 @@
     "    pg_mean = 0\n",
     "    filtered = input\n",
     "    \n",
-    "    while pg_mean * 1.1 < gt_mean and threshold > 0:\n",
+    "    while (pg_mean > gt_mean * 1.1 or pg_mean < gt_mean * 0.9) and threshold > 0:\n",
     "    # for i in range(iter):\n",
     "        filtered = lpf(filtered,ncutoff)\n",
     "        filtered[::us_rate, ::us_rate] = input[::us_rate, ::us_rate]\n",
@@ -209,17 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_frame = pg(us, m, 0.2, gt_mean=gt_mean, threshold=100)\n",
+    "pg_frame = pg(us, m, 0.2, gt_mean=gt_mean, threshold=5000)\n",
     "plt.imshow(pg_frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(us.max(), pg_frame.max())"
    ]
   },
   {
@@ -231,7 +312,7 @@
     "def back_to_pts_form(arr):\n",
     "    # get the shape of the input array\n",
     "    m, n = arr.shape\n",
-    "    azimuth_const = 100/n\n",
+    "    azimuth_const = 85/n\n",
     "    polar_const = 30/m\n",
     "    \n",
     "    # create a 3D output array of size (m * n, 3)\n",
@@ -245,33 +326,7 @@
     "            out[index, 1] = row * polar_const\n",
     "            out[index, 2] = col * azimuth_const \n",
     "    \n",
-    "    return out\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angle = {\n",
-    "    15:-15,\n",
-    "    14:-13,\n",
-    "    13:-11,\n",
-    "    12:-9,\n",
-    "    11:-7,\n",
-    "    10:-5,\n",
-    "    9:-3,\n",
-    "    8:-1,\n",
-    "    7:1,\n",
-    "    6:3,\n",
-    "    5:5,\n",
-    "    4:7,\n",
-    "    3:9,\n",
-    "    2:11,\n",
-    "    1:13,\n",
-    "    0:15,\n",
-    "}"
+    "    return out"
    ]
   },
   {
@@ -292,24 +347,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max(back_pts[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# np.savetxt(\"back_pts.txt\", back_pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "point_cloud_data = back_pts\n",
     "\n",
     "# Convert spherical coordinates to Cartesian coordinates\n",
@@ -321,15 +358,6 @@
     "\n",
     "pcd_pg_lidar = o3d.geometry.PointCloud()\n",
     "pcd_pg_lidar.points = o3d.utility.Vector3dVector(pg_pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pg_pts.shape"
    ]
   },
   {
@@ -360,20 +388,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd_pg_lidar.paint_uniform_color([1, 0.706, 0])\n",
-    "pcd_inp_lidar.paint_uniform_color([1, 0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "o3d.visualization.draw_geometries([\n",
     "    pcd_pg_lidar, \n",
-    "    pcd_inp_lidar\n",
+    "    # pcd_inp_lidar\n",
     "    ])"
    ]
   }
@@ -396,6 +413,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
@@ -403,5 +421,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
