band-reject papoulish gerchberg

--- a/Python/notebooks/zed_frame_v1.ipynb
+++ b/Python/notebooks/zed_frame_v1.ipynb
@@ -188,46 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(zed_depth)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# print(np.count_nonzero(us > 20), (zed_depth > 20).size)\n",
-    "us[us > 20] = 20\n",
-    "us = us / us.mean() * gt_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(us)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(gt_mean, us.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(us.shape)\n",
-    "print(us[160:560,:][::m,:].shape)"
+    "us = us / us.mean() * gt_mean\n"
    ]
   },
   {
@@ -240,6 +202,36 @@
     "print(np.count_nonzero(us))\n",
     "\n",
     "plt.imshow(us)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us[us > 20] = 20\n",
+    "us[us < 1] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(gt_mean, us.mean())\n",
+    "print(us.min(),us.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(us.shape)\n",
+    "print(us[160:560,:][::m,:].shape)"
    ]
   },
   {
@@ -283,7 +275,7 @@
     "    pg_mean = 0\n",
     "    filtered = input\n",
     "    \n",
-    "    while (pg_mean > gt_mean * 1.1 or pg_mean < gt_mean * 0.9) and threshold > 0:\n",
+    "    while (pg_mean > gt_mean * 1.05 or pg_mean < gt_mean * 0.95) and threshold > 0:\n",
     "    # for i in range(iter):\n",
     "        filtered = lpf(filtered,ncutoff)\n",
     "        filtered[::us_rate, ::us_rate] = input[::us_rate, ::us_rate]\n",
@@ -299,7 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_frame = pg(us, m, 0.2, gt_mean=gt_mean, threshold=5000)\n",
+    "pg_frame = us\n",
+    "pg_frame[160:560,:] = pg(us[160:560,:], m, 0.2, gt_mean=gt_mean, threshold=5000)\n",
     "plt.imshow(pg_frame)"
    ]
   },
