--- a/Python/notebooks/sensor_fusion_Band_Reject_pg.ipynb
+++ b/Python/notebooks/sensor_fusion_Band_Reject_pg.ipynb
@@ -8,34 +8,57 @@
    "source": [
     "import open3d as o3d\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import cv2\n",
+    "from matplotlib import pyplot as plt\n",
+    "import os\n",
+    "from PIL import Image\n",
     "import csv\n",
-    "import os"
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ZED_data = '../../data/ZED/720/depth_PNG_3029_720_06-12-2022-19-39-53.png'\n",
+    "os.path.exists(ZED_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zed_depth_image = Image.open(ZED_data).convert('I')\n",
+    "zed_depth = np.asarray(zed_depth_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(zed_depth)\n",
+    "print(zed_depth.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "LiDAR_data = '../../data/lidar/300/2022-12-10-16-53-36_Velodyne-VLP-16-Data.csv'\n",
-    "\n",
     "os.path.exists(LiDAR_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(LiDAR_data, newline='') as f:\n",
@@ -130,18 +153,11 @@
     "    # Loop over the array and insert zeros at regular intervals\n",
     "    for i in range(num_zeros):\n",
     "        index = (i + 1) * step_size\n",
-    "        sorted_array.insert(index, gt_mean)\n",
+    "        sorted_array.insert(index, 0)\n",
     "    print(len(sorted_array))\n",
     "    \n",
-    "    sph_lidar_frame.append(sorted_array)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "apply papoulish gerchberg"
+    "    sph_lidar_frame.append(sorted_array)\n",
+    "sph_lidar_frame = np.asarray(sph_lidar_frame)"
    ]
   },
   {
@@ -150,15 +166,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = 720//16\n",
-    "\n",
+    "print(sph_lidar_frame.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = 400//16\n",
     "gt_mean = sph_lidar_85[:,2].mean()\n",
     "\n",
-    "us = np.ones((720,1280)) * gt_mean /2\n",
-    "us[::m,:] = sph_lidar_frame\n",
+    "us = zed_depth\n",
+    "us = us / 1000  # us.mean() * gt_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(np.count_nonzero(us > 20), (zed_depth > 20).size)\n",
+    "# us = us / us.mean() * gt_mean\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us[160:560,:][::m,:] = sph_lidar_frame\n",
     "print(np.count_nonzero(us))\n",
     "\n",
     "plt.imshow(us)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us[us > 20] = 20\n",
+    "us[us < 1] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(gt_mean, us.mean())\n",
+    "print(us.min(),us.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(us.shape)\n",
+    "print(us[160:560,:][::m,:].shape)"
    ]
   },
   {
@@ -238,7 +311,7 @@
     "    pg_mean = 0\n",
     "    filtered = input\n",
     "    \n",
-    "    while pg_mean * 1.1 < gt_mean and threshold > 0:\n",
+    "    while (pg_mean > gt_mean * 1.05 or pg_mean < gt_mean * 0.95) and threshold > 0:\n",
     "    # for i in range(iter):\n",
     "        # filtered = lpf(filtered, lcutoff)\n",
     "        filtered = brf(filtered, low_cutoff=lcutoff, high_cutoff=hcutoff)\n",
@@ -255,17 +328,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_frame = pg(us, m, gt_mean=gt_mean, threshold=5000)\n",
+    "pg_frame = us\n",
+    "pg_frame[160:560,:] = pg(us[160:560,:], m, gt_mean=gt_mean, threshold=5000, lcutoff=0.1, hcutoff=0.3)\n",
     "plt.imshow(pg_frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(us.max(), pg_frame.max())"
    ]
   },
   {
@@ -277,7 +342,7 @@
     "def back_to_pts_form(arr):\n",
     "    # get the shape of the input array\n",
     "    m, n = arr.shape\n",
-    "    azimuth_const = 100/n\n",
+    "    azimuth_const = 85/n\n",
     "    polar_const = 30/m\n",
     "    \n",
     "    # create a 3D output array of size (m * n, 3)\n",
@@ -291,33 +356,7 @@
     "            out[index, 1] = row * polar_const\n",
     "            out[index, 2] = col * azimuth_const \n",
     "    \n",
-    "    return out\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angle = {\n",
-    "    15:-15,\n",
-    "    14:-13,\n",
-    "    13:-11,\n",
-    "    12:-9,\n",
-    "    11:-7,\n",
-    "    10:-5,\n",
-    "    9:-3,\n",
-    "    8:-1,\n",
-    "    7:1,\n",
-    "    6:3,\n",
-    "    5:5,\n",
-    "    4:7,\n",
-    "    3:9,\n",
-    "    2:11,\n",
-    "    1:13,\n",
-    "    0:15,\n",
-    "}"
+    "    return out"
    ]
   },
   {
@@ -327,7 +366,6 @@
    "outputs": [],
    "source": [
     "back_pts = back_to_pts_form(pg_frame)\n",
-    "back_pts[:,1] += 9000\n",
     "# back_pts[:,1] = np.array(list(map(angle.get, back_pts[:,1])))\n",
     "back_pts[:,1] = np.radians(back_pts[:,1])\n",
     "back_pts[:,2] = np.radians(back_pts[:,2])"
@@ -380,20 +418,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd_pg_lidar.paint_uniform_color([1, 0.706, 0])\n",
-    "pcd_inp_lidar.paint_uniform_color([1, 0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "o3d.visualization.draw_geometries([\n",
     "    pcd_pg_lidar, \n",
-    "    pcd_inp_lidar\n",
+    "    # pcd_inp_lidar\n",
     "    ])"
    ]
   }
