Jupyner Notebooks backup

--- a/Python/notebooks/sensor_fusion_Band_Reject_pg copy.ipynb
+++ b/Python/notebooks/sensor_fusion_Band_Reject_pg copy.ipynb
@@ -8,34 +8,57 @@
    "source": [
     "import open3d as o3d\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import cv2\n",
+    "from matplotlib import pyplot as plt\n",
+    "import os\n",
+    "from PIL import Image\n",
     "import csv\n",
-    "import os"
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ZED_data = '../../data/20221210/ZED/720/depth_PNG_3029_720_06-12-2022-19-39-53.png'\n",
+    "os.path.exists(ZED_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zed_depth_image = Image.open(ZED_data).convert('I')\n",
+    "zed_depth = np.asarray(zed_depth_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(zed_depth)\n",
+    "print(zed_depth.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "LiDAR_data = '../../data/20221210/lidar/300/2022-12-10-16-53-36_Velodyne-VLP-16-Data.csv'\n",
-    "\n",
     "os.path.exists(LiDAR_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(LiDAR_data, newline='') as f:\n",
@@ -44,9 +67,7 @@
     "    headers = rows.pop(0)\n",
     "    for index, row in enumerate(rows[1:]):\n",
     "        # print(index, row[0])\n",
-    "        sph_lidar[index] = row[7:10]\n",
-    "\n",
-    "gt_mean = sph_lidar[:,2].mean()"
+    "        sph_lidar[index] = row[7:10]"
    ]
   },
   {
@@ -83,12 +104,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mid_cutoff = 18000\n",
+    "mid_cutoff = 17100\n",
     "sph_lidar[:,1] += mid_cutoff\n",
-    "\n",
     "mask = sph_lidar[:,1] > 2*mid_cutoff\n",
-    "\n",
     "sph_lidar[mask, 1] -= 2*mid_cutoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_cutoff = mid_cutoff + 85 * 100 / 2\n",
+    "low_cutoff = mid_cutoff - 85 * 100 / 2\n",
+    "\n",
+    "sph_lidar_85 = sph_lidar[sph_lidar[:,1] > low_cutoff]\n",
+    "sph_lidar_85 = sph_lidar_85[sph_lidar_85[:,1] < high_cutoff]"
    ]
   },
   {
@@ -104,8 +136,8 @@
     "for i in range(num_arrays):\n",
     "    lower = i\n",
     "    upper = i + 1\n",
-    "    mask = (sph_lidar[:, 0] >= lower) & (sph_lidar[:, 0] < upper)\n",
-    "    sub_array = sph_lidar[mask, 1:]\n",
+    "    mask = (sph_lidar_85[:, 0] >= lower) & (sph_lidar_85[:, 0] < upper)\n",
+    "    sub_array = sph_lidar_85[mask, 1:]\n",
     "    arrays.append(sub_array)\n",
     "\n",
     "# Convert each sub-array to a 1D array sorted by the first column and using the second column as the value\n",
@@ -121,10 +153,11 @@
     "    # Loop over the array and insert zeros at regular intervals\n",
     "    for i in range(num_zeros):\n",
     "        index = (i + 1) * step_size\n",
-    "        sorted_array.insert(index, gt_mean)\n",
+    "        sorted_array.insert(index, 0)\n",
     "    print(len(sorted_array))\n",
     "    \n",
-    "    sph_lidar_frame.append(sorted_array)"
+    "    sph_lidar_frame.append(sorted_array)\n",
+    "sph_lidar_frame = np.asarray(sph_lidar_frame)"
    ]
   },
   {
@@ -133,8 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ZED_data = '../../data/20221210/ZED/720/point_cloud_PLY_3029_720_06-12-2022-19-39-57.ply'\n",
-    "os.path.exists(ZED_data)"
+    "print(sph_lidar_frame.shape)"
    ]
   },
   {
@@ -143,62 +175,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def appendSpherical_np(xyz):\n",
-    "    ptsnew = np.hstack((xyz, np.zeros(xyz.shape)))\n",
-    "    xy = xyz[:,2]**2 + xyz[:,1]**2\n",
-    "    ptsnew[:,3] = np.sqrt(xy + xyz[:,0]**2)\n",
-    "    # ptsnew[:,4] = np.arctan2(np.sqrt(xy), xyz[:,0]) # for elevation angle defined from Z-axis down\n",
-    "    ptsnew[:,4] = np.arctan2(xyz[:,0], np.sqrt(xy)) # for elevation angle defined from XY-plane up\n",
-    "    ptsnew[:,5] = np.arctan2(xyz[:,1], xyz[:,2])\n",
-    "    return ptsnew"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pcd_zed = o3d.io.read_point_cloud(ZED_data)\n",
-    "pts_zed = np.asarray(pcd_zed.points)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pts_zed_sph = appendSpherical_np(pts_zed)[:,3:6]\n",
-    "pts_zed_sph[:,1:3] = np.degrees(pts_zed_sph[:,1:3]) + 180"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pts_zed_sph[:,2].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = pts_zed_sph[:,2]\n",
+    "m = 400//16\n",
+    "gt_mean = sph_lidar_85[:,2].mean()\n",
     "\n",
-    "lower_angle = 20\n",
-    "upper_angle = 20\n",
-    "\n",
-    "polar_min, polar_max = pts_zed_sph[:,2].min() + lower_angle, pts_zed_sph[:,2].max() - upper_angle\n",
-    "\n",
-    "pts_zed_sph_filt = pts_zed_sph[(a < polar_min) | (a > polar_max)]\n",
-    "# pts_zed_sph_filt = b[b[:,2] < max]\n",
-    "\n",
-    "print(pts_zed_sph_filt.shape)"
+    "us = zed_depth\n",
+    "us = us / 1000  # us.mean() * gt_mean"
    ]
   },
   {
@@ -207,11 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pts_zed_sph_filt[:,1] *= 14.03\n",
-    "pts_zed_sph_filt[:,1] = pts_zed_sph_filt[:,1]//1 - 1903\n",
-    "print(len(np.unique(pts_zed_sph_filt[:,1])))\n",
-    "\n",
-    "h_range = (int(pts_zed_sph_filt[:,1].min()), int(pts_zed_sph_filt[:,1].max()+1))"
+    "# print(np.count_nonzero(us > 20), (zed_depth > 20).size)\n",
+    "# us = us / us.mean() * gt_mean\n"
    ]
   },
   {
@@ -220,72 +198,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bg_depth = pts_zed_sph_filt[:,0].mean()\n",
-    "print(bg_depth)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def map_range_to_interval(value, old_min, old_max, new_min, new_max):\n",
-    "    mapped_value = (value - old_min) * (new_max - new_min) / (old_max - old_min) + new_min\n",
-    "    return int(mapped_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = pts_zed_sph_filt[:,2] > lower_angle\n",
-    "\n",
-    "pts_zed_sph_filt[mask, 2] -= 360\n",
-    "pts_zed_sph_filt[not mask.all(), 2] += lower_angle\n",
-    "\n",
-    "pts_zed_sph_filt[:,2] *= 1.6\n",
-    "\n",
-    "v_range = (pts_zed_sph_filt[:,2].min(), pts_zed_sph_filt[:,2].max()+1)\n",
-    "\n",
-    "pts_zed_sph_filt[:,2] = np.vectorize(map_range_to_interval)(pts_zed_sph_filt[:,2], v_range[0], v_range[1], 0, 720)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sph_zed_frame = []\n",
-    "for i in range(0, 720):\n",
-    "    lower = i\n",
-    "    upper = i + 1\n",
-    "    mask = (pts_zed_sph_filt[:, 2] >= lower) & (pts_zed_sph_filt[:, 2] < upper)\n",
-    "    sub_array = pts_zed_sph_filt[mask, 0:2]\n",
-    "\n",
-    "    row = np.ones(1280)*bg_depth\n",
-    "    row[sub_array[:,1].astype(int)] = sub_array[:,0]\n",
-    "    sph_zed_frame.append(row)\n",
-    "sph_zed_frame = np.asarray(sph_zed_frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = 720//16\n",
-    "\n",
-    "# us = np.ones((720,1280)) * gt_mean /2\n",
-    "us = sph_zed_frame\n",
-    "us[::m,:] = sph_lidar_frame\n",
+    "us[160:560,:][::m,:] = sph_lidar_frame\n",
     "print(np.count_nonzero(us))\n",
     "\n",
     "plt.imshow(us)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us[us > 20] = 20\n",
+    "us[us < 1] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(gt_mean, us.mean())\n",
+    "print(us.min(),us.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(us.shape)\n",
+    "print(us[160:560,:][::m,:].shape)"
    ]
   },
   {
@@ -322,14 +268,55 @@
     "\n",
     "    return img_filtered\n",
     "\n",
+    "def brf(img, low_cutoff, high_cutoff):\n",
+    "    # Apply 2D FFT to the image\n",
+    "    f = np.fft.fft2(img)\n",
     "\n",
-    "def pg(input, us_rate, ncutoff, threshold = 100):\n",
+    "    # Shift the zero frequency component to the center of the spectrum\n",
+    "    fshift = np.fft.fftshift(f)\n",
+    "\n",
+    "    # Create a circular mask of the same size as the spectrum\n",
+    "    rows, cols = img.shape\n",
+    "    crow, ccol = rows // 2, cols // 2\n",
+    "    mask_low = np.zeros((rows, cols), np.uint8)\n",
+    "    mask_high = np.zeros((rows, cols), np.uint8)\n",
+    "\n",
+    "    # Create two circular masks with different radii\n",
+    "    low_cutoff = int(min(crow, ccol)*low_cutoff)\n",
+    "    high_cutoff = int(min(crow, ccol)*high_cutoff)\n",
+    "    cv2.circle(mask_low, (ccol, crow), low_cutoff, 1, -1)\n",
+    "    cv2.circle(mask_high, (ccol, crow), high_cutoff, 1, -1)\n",
+    "\n",
+    "    # Combine the two masks to create a bandpass filter\n",
+    "    mask = cv2.bitwise_xor(mask_low, mask_high)\n",
+    "\n",
+    "    # Invert the filter to create a band reject filter\n",
+    "    mask = 1 - mask\n",
+    "\n",
+    "    # Apply the mask to the shifted spectrum\n",
+    "    fshift_filtered = fshift * mask\n",
+    "\n",
+    "    # Shift the zero frequency component back to the corner of the spectrum\n",
+    "    f_filtered = np.fft.ifftshift(fshift_filtered)\n",
+    "\n",
+    "    # Apply the inverse 2D FFT to the filtered spectrum\n",
+    "    img_filtered = np.fft.ifft2(f_filtered)\n",
+    "    img_filtered = np.real(img_filtered)\n",
+    "\n",
+    "    return img_filtered\n",
+    "\n",
+    "def pg(input, us_rate, gt_mean, threshold = 100, lcutoff = 0.2, hcutoff = 0.4):\n",
+    "# def pg(input, us_rate, ncutoff, gt_mean, iter):\n",
+    "\n",
+    "    pg_mean = 0\n",
     "    filtered = input\n",
     "    \n",
-    "    while threshold > 0:\n",
-    "        filtered = lpf(filtered,ncutoff)\n",
+    "    while (pg_mean > gt_mean * 1.1 or pg_mean < gt_mean * 0.9   ) and threshold > 0:\n",
+    "    # for i in range(iter):\n",
+    "        filtered = lpf(filtered, lcutoff)\n",
+    "        # filtered = brf(filtered, low_cutoff=lcutoff, high_cutoff=hcutoff)\n",
     "        filtered[::us_rate, ::us_rate] = input[::us_rate, ::us_rate]\n",
-    "\n",
+    "        pg_mean = filtered.mean()\n",
     "        threshold -=1\n",
     "    \n",
     "    return filtered"
@@ -341,34 +328,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_frame = pg(us, m, ncutoff=1, threshold=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pg_frame = us\n",
+    "pg_frame = pg(us, m, gt_mean=gt_mean, threshold=50, lcutoff=0.1, hcutoff=0.3)\n",
     "plt.imshow(pg_frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pg_frame - us"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(us.max(), pg_frame.max())"
    ]
   },
   {
@@ -380,7 +342,7 @@
     "def back_to_pts_form(arr):\n",
     "    # get the shape of the input array\n",
     "    m, n = arr.shape\n",
-    "    azimuth_const = 100/n\n",
+    "    azimuth_const = 85/n\n",
     "    polar_const = 30/m\n",
     "    \n",
     "    # create a 3D output array of size (m * n, 3)\n",
@@ -394,33 +356,7 @@
     "            out[index, 1] = row * polar_const\n",
     "            out[index, 2] = col * azimuth_const \n",
     "    \n",
-    "    return out\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "angle = {\n",
-    "    15:-15,\n",
-    "    14:-13,\n",
-    "    13:-11,\n",
-    "    12:-9,\n",
-    "    11:-7,\n",
-    "    10:-5,\n",
-    "    9:-3,\n",
-    "    8:-1,\n",
-    "    7:1,\n",
-    "    6:3,\n",
-    "    5:5,\n",
-    "    4:7,\n",
-    "    3:9,\n",
-    "    2:11,\n",
-    "    1:13,\n",
-    "    0:15,\n",
-    "}"
+    "    return out"
    ]
   },
   {
@@ -441,15 +377,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max(back_pts[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "point_cloud_data = back_pts\n",
     "\n",
     "# Convert spherical coordinates to Cartesian coordinates\n",
@@ -461,15 +388,6 @@
     "\n",
     "pcd_pg_lidar = o3d.geometry.PointCloud()\n",
     "pcd_pg_lidar.points = o3d.utility.Vector3dVector(pg_pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pg_pts.shape"
    ]
   },
   {
@@ -500,7 +418,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "o3d.visualization.draw_geometries([\n",
     "    pcd_pg_lidar, \n",
     "    # pcd_inp_lidar\n",
@@ -524,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.9"
   },
   "vscode": {
    "interpreter": {
