--- a/Python/notebooks/sensor_fusion_pg_brf.ipynb
+++ b/Python/notebooks/sensor_fusion_pg_brf.ipynb
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lpf(img, ncutoff):\n",
+    "def brf(img, low_cutoff, high_cutoff):\n",
     "    # Apply 2D FFT to the image\n",
     "    f = np.fft.fft2(img)\n",
     "\n",
@@ -304,11 +304,20 @@
     "    # Create a circular mask of the same size as the spectrum\n",
     "    rows, cols = img.shape\n",
     "    crow, ccol = rows // 2, cols // 2\n",
-    "    mask = np.zeros((rows, cols), np.uint8)\n",
-    "    cutoff = int(min(crow, ccol)*ncutoff)\n",
-    "    axes = (5, 10)\n",
-    "    cv2.circle(mask, (ccol, crow), cutoff, 1, -1)\n",
-    "    # cv2.ellipse(mask, (ccol, crow), axes, 0, 0, 360,  1, -1)\n",
+    "    mask_low = np.zeros((rows, cols), np.uint8)\n",
+    "    mask_high = np.zeros((rows, cols), np.uint8)\n",
+    "\n",
+    "    # Create two circular masks with different radii\n",
+    "    low_cutoff = int(min(crow, ccol)*low_cutoff)\n",
+    "    high_cutoff = int(min(crow, ccol)*high_cutoff)\n",
+    "    cv2.circle(mask_low, (ccol, crow), low_cutoff, 1, -1)\n",
+    "    cv2.circle(mask_high, (ccol, crow), high_cutoff, 1, -1)\n",
+    "\n",
+    "    # Combine the two masks to create a bandpass filter\n",
+    "    mask = cv2.bitwise_xor(mask_low, mask_high)\n",
+    "\n",
+    "    # Invert the filter to create a band reject filter\n",
+    "    mask = 1 - mask\n",
     "\n",
     "    # Apply the mask to the shifted spectrum\n",
     "    fshift_filtered = fshift * mask\n",
@@ -323,13 +332,12 @@
     "    return img_filtered\n",
     "\n",
     "\n",
-    "def pg(input, us_rate, ncutoff, threshold = 100):\n",
+    "def pg(input, us_rate, threshold = 100, lcutoff = 0.2, hcutoff = 0.4):\n",
     "    filtered = input\n",
     "    \n",
     "    while threshold > 0:\n",
-    "        filtered = lpf(filtered,ncutoff)\n",
+    "        filtered = brf(filtered, low_cutoff=lcutoff, high_cutoff=hcutoff)\n",
     "        filtered[::us_rate, ::us_rate] = input[::us_rate, ::us_rate]\n",
-    "\n",
     "        threshold -=1\n",
     "    \n",
     "    return filtered"
@@ -341,15 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_frame = pg(us, m, ncutoff=1, threshold=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pg_frame = pg(us, m, threshold=50, lcutoff=0.2, hcutoff=4)\n",
     "plt.imshow(pg_frame)"
    ]
   },
@@ -359,16 +359,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(us.max(), pg_frame.max())\n",
     "pg_frame - us"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(us.max(), pg_frame.max())"
+    "2D spherical depth frame to spherical point cloud convertor."
    ]
   },
   {
@@ -377,24 +377,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def back_to_pts_form(arr):\n",
-    "    # get the shape of the input array\n",
-    "    m, n = arr.shape\n",
+    "def depth_to_sph_pts(depth):\n",
+    "    # get the shape of the input arr\n",
+    "    m, n = depth.shape\n",
     "    azimuth_const = 100/n\n",
     "    polar_const = 30/m\n",
     "    \n",
-    "    # create a 3D output array of size (m * n, 3)\n",
-    "    out = np.zeros((m * n, 3))\n",
+    "    # create a 3D output arr of size (m * n, 3)\n",
+    "    pts = np.zeros((m * n, 3))\n",
     "    \n",
-    "    # populate the output array\n",
+    "    # populate the ptsput arr\n",
     "    for row in range(m):\n",
     "        for col in range(n):\n",
     "            index = row * n + col\n",
-    "            out[index, 0] = arr[row, col]\n",
-    "            out[index, 1] = row * polar_const\n",
-    "            out[index, 2] = col * azimuth_const \n",
+    "            pts[index, 0] = depth[row, col]\n",
+    "            pts[index, 1] = row * polar_const\n",
+    "            pts[index, 2] = col * azimuth_const \n",
     "    \n",
-    "    return out\n"
+    "    return pts\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spherical to Cartesian point cloud convertor."
    ]
   },
   {
@@ -403,64 +411,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angle = {\n",
-    "    15:-15,\n",
-    "    14:-13,\n",
-    "    13:-11,\n",
-    "    12:-9,\n",
-    "    11:-7,\n",
-    "    10:-5,\n",
-    "    9:-3,\n",
-    "    8:-1,\n",
-    "    7:1,\n",
-    "    6:3,\n",
-    "    5:5,\n",
-    "    4:7,\n",
-    "    3:9,\n",
-    "    2:11,\n",
-    "    1:13,\n",
-    "    0:15,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "back_pts = back_to_pts_form(pg_frame)\n",
-    "# back_pts[:,1] = np.array(list(map(angle.get, back_pts[:,1])))\n",
-    "back_pts[:,1] = np.radians(back_pts[:,1])\n",
-    "back_pts[:,2] = np.radians(back_pts[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max(back_pts[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "point_cloud_data = back_pts\n",
+    "def sph_pcd_to_cart_pcd(sph_pcd):\n",
+    "    sph_pcd[:,1] = np.radians(sph_pcd[:,1])\n",
+    "    sph_pcd[:,2] = np.radians(sph_pcd[:,2])\n",
     "\n",
-    "# Convert spherical coordinates to Cartesian coordinates\n",
-    "x = point_cloud_data[:, 0] * np.cos(point_cloud_data[:, 1]) * np.cos(point_cloud_data[:, 2])\n",
-    "y = point_cloud_data[:, 0] * np.cos(point_cloud_data[:, 1]) * np.sin(point_cloud_data[:, 2])\n",
-    "z = point_cloud_data[:, 0] * np.sin(point_cloud_data[:, 1])\n",
+    "    # Convert spherical coordinates to Cartesian coordinates\n",
+    "    x = sph_pcd[:, 0] * np.cos(sph_pcd[:, 1]) * np.cos(sph_pcd[:, 2])\n",
+    "    y = sph_pcd[:, 0] * np.cos(sph_pcd[:, 1]) * np.sin(sph_pcd[:, 2])\n",
+    "    z = sph_pcd[:, 0] * np.sin(sph_pcd[:, 1])\n",
     "\n",
-    "pg_pts = np.asarray([x, y, z]).T\n",
-    "\n",
-    "pcd_pg_lidar = o3d.geometry.PointCloud()\n",
-    "pcd_pg_lidar.points = o3d.utility.Vector3dVector(pg_pts)"
+    "    pcd = o3d.geometry.PointCloud()\n",
+    "    pcd.points = o3d.utility.Vector3dVector(np.asarray([x, y, z]).T)\n",
+    "    return pcd"
    ]
   },
   {
@@ -469,7 +431,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_pts.shape"
+    "pts_pg = depth_to_sph_pts(pg_frame)\n",
+    "pcd_pg = sph_pcd_to_cart_pcd(pts_pg)"
    ]
   },
   {
@@ -502,7 +465,7 @@
    "source": [
     "\n",
     "o3d.visualization.draw_geometries([\n",
-    "    pcd_pg_lidar, \n",
+    "    pcd_pg, \n",
     "    # pcd_inp_lidar\n",
     "    ])"
    ]
@@ -524,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.9"
   },
   "vscode": {
    "interpreter": {
