--- a/Python/notebooks/sensor_fusion_pg_cupy.ipynb
+++ b/Python/notebooks/sensor_fusion_pg_cupy.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import open3d as o3d\n",
     "import numpy as np\n",
+    "import cupy as cp\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import csv\n",
@@ -283,7 +284,6 @@
     "# us = np.ones((720,1280)) * gt_mean /2\n",
     "us = sph_zed_frame\n",
     "us[::m,:] = sph_lidar_frame\n",
-    "print(np.count_nonzero(us))\n",
     "\n",
     "plt.imshow(us)"
    ]
@@ -296,34 +296,36 @@
    "source": [
     "def lpf(img, ncutoff):\n",
     "    # Apply 2D FFT to the image\n",
-    "    f = np.fft.fft2(img)\n",
+    "    f = cp.fft.fft2(img)\n",
     "\n",
     "    # Shift the zero frequency component to the center of the spectrum\n",
-    "    fshift = np.fft.fftshift(f)\n",
+    "    fshift = cp.fft.fftshift(f)\n",
     "\n",
     "    # Create a circular mask of the same size as the spectrum\n",
     "    rows, cols = img.shape\n",
     "    crow, ccol = rows // 2, cols // 2\n",
     "    mask = np.zeros((rows, cols), np.uint8)\n",
     "    cutoff = int(min(crow, ccol)*ncutoff)\n",
-    "    axes = (5, 10)\n",
     "    cv2.circle(mask, (ccol, crow), cutoff, 1, -1)\n",
-    "    # cv2.ellipse(mask, (ccol, crow), axes, 0, 0, 360,  1, -1)\n",
+    "    # cv2.ellipse(mask, (ccol, crow), (1, 2) * cutoff, 0, 0, 360,  1, -1)\n",
+    "\n",
+    "    mask = cp.asarray(mask)\n",
     "\n",
     "    # Apply the mask to the shifted spectrum\n",
     "    fshift_filtered = fshift * mask\n",
     "\n",
     "    # Shift the zero frequency component back to the corner of the spectrum\n",
-    "    f_filtered = np.fft.ifftshift(fshift_filtered)\n",
+    "    f_filtered = cp.fft.ifftshift(fshift_filtered)\n",
     "\n",
     "    # Apply the inverse 2D FFT to the filtered spectrum\n",
-    "    img_filtered = np.fft.ifft2(f_filtered)\n",
-    "    img_filtered = np.real(img_filtered)\n",
+    "    img_filtered = cp.fft.ifft2(f_filtered)\n",
+    "    img_filtered = cp.real(img_filtered)\n",
     "\n",
     "    return img_filtered\n",
     "\n",
     "\n",
     "def pg(input, us_rate, ncutoff, threshold = 100):\n",
+    "    ncutoff = ncutoff / 10\n",
     "    filtered = input\n",
     "    \n",
     "    while threshold > 0:\n",
@@ -341,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_frame = pg(us, m, ncutoff=1, threshold=100)"
+    "plt.imshow(cp.log(abs(cp.fft.fftshift(cp.fft.fft2(cp.asarray(us))))).get())"
    ]
   },
   {
@@ -350,7 +352,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(pg_frame)"
+    "img_l = lpf(cp.asarray(us), 0.25)\n",
+    "plt.imshow(cp.log(abs(cp.fft.fftshift(cp.fft.fft2(img_l)))).get())\n",
+    "img_l"
    ]
   },
   {
@@ -359,7 +363,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_frame - us"
+    "img_l[::m,:] = cp.asarray(us)[::m,:]\n",
+    "plt.imshow(cp.log(abs(cp.fft.fftshift(cp.fft.fft2(cp.asarray(img_l))))).get())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pg_frame = pg(cp.asarray(us), m, ncutoff=1, threshold=1)\n",
+    "plt.imshow(pg_frame.get())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pg_frame - us"
    ]
   },
   {
