Some Python scripts were updated

--- a/Python/notebooks/sensor_fusion_pg_cupy.ipynb
+++ b/Python/notebooks/sensor_fusion_pg_cupy.ipynb
@@ -56,6 +56,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sph_lidar.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "indexer = {\n",
     "    0:15,\n",
     "    2:14,\n",
@@ -527,7 +536,7 @@
     "\n",
     "o3d.visualization.draw_geometries([\n",
     "    pcd_pg_lidar, \n",
-    "    # pcd_inp_lidar\n",
+    "    pcd_inp_lidar\n",
     "    ])"
    ]
   }
